fixed footer and center alignment

--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ body {
   width: 100vw;
   height: 100vh;
   font-size: 15px;
-  display: grid;
-  place-items: center;
 }
 
 .card {
@@ -29,6 +27,10 @@ body {
   border-radius: 20px;
   padding: 16px 16px 40px 16px;
   box-shadow: 0 25px 25px rgba(0, 0, 0, 0.0477);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .qr-code {
@@ -68,7 +70,9 @@ body {
 
 .attribution {
   position: absolute;
-  bottom: 25px;
+  left: 0;
+  right: 0;
+  bottom: 10px;
   font-size: 11px;
   text-align: center;
 }
